fix error overflow text

--- a/front/src/components/Form/index.css
+++ b/front/src/components/Form/index.css
@@ -74,6 +74,7 @@
     color: red;
     margin: 0;
     margin-top: 0.5rem;
+    overflow-wrap: break-word;
 }
 
 .form-selector {
